--- a/Destinations.html
+++ b/Destinations.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover our Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Destnations</title>
 </head>
-<body>
-    <h1>Discoveries</h1>
+<body color="rgb(0,100,0)">
+    <a href="index.html">Home</a>
+    <h1>Destinations</h1>
+    <img src="big5/ap.jpg"
+    img src="big5/lit.JPG"
     <a href="index.html" >Come Back later</a>
+
 </body>
 </html>
