--- a/index.html
+++ b/index.html
@@ -5,137 +5,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M$J Discoveries</title>
+    <title>M$J Discovers</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 
 <body>
-    <div class="wrapper">
 
-        <div class="logo">
-            <img src="big5/logo.jpg" width="120px" height="150px">
+    <div class="menu-bar">
+        <div class="header1">
+            <h1>M&J<span> Discovers</span></h1>
         </div>
-        <div class=" head-text">
-            <h1 id="git_header">M&J Tours and Discoveries</h1>
-        </div>
-        <ul class="nav-menu">
-            <li><a href="home">Home</a>
+        <ul>
+            <li class="active"><a href="index.html">Home</a>
                 <div class="sub-menu-1">
                     <ul>
-                        <li><a href="#">Why choose us</a></li>
-                        <li><a href="#">Top deals</a></li>
-                        <li><a href="#">Customer Feedbaks</a></li>
+                        <li><a href="#">Welcome</a></li>
+                        <li><a href="#">We are here for you</a></li>
+                        <li><a href="#">Our locations</a></li>
+                        <li><a href="#">Deals</a></li>
                     </ul>
                 </div>
             </li>
-            <li><a href="about us">About US</a></li>
-            <li><a href="Destinations">Destinations</a></li>
-            <li> <a href="Services">Services</a></li>
-            <li> <a href="Our Contacts">Contacts</a></li>
+            <li><a href="#">About us.html</a>
 
+                <div class="sub-menu-1">
+                    <ul>
+                        <li><a href="mission.html">Our Mission</a></li>
+                        <li><a href="vision.html">Vision</a></li>
+                        <li><a href="services.html">Customer Service</a></li>
+                        <li><a href="team.html">Team M&J</a></li>
+                    </ul>
+                </div>
+            </li>
+
+            <li><a href="Dest.html">Destinations</a></li>
+            <li><a href="Deals.html">Deals</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="the future.html">Our Future Dest</a></li>
         </ul>
     </div>
+    <div class="header2">
+        <div class="pages">
 
-    <div class="head2-text">
-        <h2>Why M&J Tours?</h2>
-        <p><strong><em>M&J Tours Discover</em> </strong>the World has been at the forefront of bespoke tourism since
-            2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
-            all travel tour companies are created equally. To help plan your next jaunt to destinations near and
-            far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter,
-            wish to lean into hidden histories, or want maximum adventure on a budget. In
-            that time, we’ve
-            become one of the Washington's leading independent specialist travel companies.</p>
+            <h2>Why M&J Discoveries?</h2>
+            <p><strong><em>M&J Tours Discover</em> </strong>the World has been at the forefront of bespoke tourism since
+                2000.Name a travel style or preference and there’s a tour company out there that caters to it—though not
+                all travel tour companies are created equally. To help plan your next jaunt to destinations near and
+                far, we rounded up some of the best tour companies out there, whether you’re a food-obsessed jetsetter,
+                wish to lean into hidden histories, or want maximum adventure on a budget. In
+                that time, we’ve
+                become one of the Washington's leading independent specialist travel companies.</p>
 
+            <p>
+            <h2>Future Destinations</h2>
+            <img src="big5/ap.jpg" alt="Plane" width="400">
+            <ol>
+                <li>Cairo</li>
+                <li>Paris</li>
+                <li>Italy</li>
+                <li>Johansburg</li>
+                <li>Brazil</li>
+                <li>Nairobi, Kenya</li>
+            </ol><br>
+            </p>
+            <h2>Top Destinations</h2>
+            <a href="TopDestinations.html">Destny</a><br>
+            <a href="https://www.olympic.edu/" target="_blank">Top Destinations</a>
+            <h2>Our Discoveries</h2>
+            <h2>Future Destination</h2>
 
+            <p>
+                Portugal Solo Trip
+                10/04/22 by 4th-time traveler Violet
+                What a great trip! I started out not knowing anyone and finished with 29 friends. I had a great
+                time,
+                ate fabulous food and enjoyed beautiful scenery. Rafi was a great and knowledgeable tour guide.
+                Excellent!
+                05/10/22 by 3rd-time traveler Gena
+                This was my first solo tour but it won't be my last. My fellow travelers were wonderful and easy to
+                get
+                along with. The hotels were all comfortable, spacious, and accommodating. The food was delicious in
+                every hotel restaurant and tour venue.
+                Ireland for Solo Travelers →When you set out for the finest Touring destinations in the world,
+                you deserve an elevated charter experience managed by the best <strong>M&J Tour Discoveries</strong>
+                in
+                the industry. Our team has the knowledge you need to have the experience of a lifetime including
+                secret anchorages quiet spots, and not-to-miss experiences in each location. Some of the
+                destinations not in the list are <a href="Services.html">
+                    For Information Click HERE</a>
+            </p>
 
-        <h2>Our Hotels</h2>
-        <img src="big5/ht1.jpg" alt="lodges" width="420px">
-        <p>Guests from around the country have come to know <strong>The M&J Discoveries </strong>trademark style,
-            sophistication and comfort, while meeting and event planners know us for our high degree of service and our
-            remarkable staff. The Saint Paul Hotel, a wedding venue with lodging, offers 255 deluxe hotel rooms and
-            suites.</p>
-
-
-
-        <h2>Future Destinations</h2>
-        <img src="big5/ap.jpg" alt="Plane" width="400">
-        <ol>
-            <li>Cairo</li>
-            <li>Paris</li>
-            <li>Italy</li>
-            <li>Johansburg</li>
-            <li>Brazil</li>
-            <li>Nairobi, Kenya</li>
-        </ol><br>
-
-        <h3>Discover our Sales</h3>
-        <img src="big5/bus.jpg" alt="transport" width="450">
-        <ul>
-            <li>Flight to Cairo...$3500</li>
-            <li>Flight to Paris...$5000</li>
-            <li>Flight to Italy...$5000</li>
-            <li>Flight to Johansburg...$6000</li>
-            <li>Flight to Brazil....$7000</li>
-            <li>Flight to Kenya...$5000</li>
-        </ul>
-
-        <div class="container">
-            <div class="firstDiv"><br>
-                <h1>Top Destinations</h1>
-                <p>
-                    Portugal Solo Trip
-                    10/04/22 by 4th-time traveler Violet
-                    What a great trip! I started out not knowing anyone and finished with 29 friends. I had a great
-                    time,
-                    ate fabulous food and enjoyed beautiful scenery. Rafi was a great and knowledgeable tour guide.
-                    Excellent!
-                    05/10/22 by 3rd-time traveler Gena
-                    This was my first solo tour but it won't be my last. My fellow travelers were wonderful and easy to
-                    get
-                    along with. The hotels were all comfortable, spacious, and accommodating. The food was delicious in
-                    every hotel restaurant and tour venue.
-                    Ireland for Solo Travelers →When you set out for the finest Touring destinations in the world,
-                    you deserve an elevated charter experience managed by the best <strong>M&J Tour Discoveries</strong>
-                    in
-                    the industry. Our team has the knowledge you need to have the experience of a lifetime including
-                    secret anchorages quiet spots, and not-to-miss experiences in each location. Some of the
-                    destinations not in the list are <a href="Services.html">
-                        For Information Click HERE</a>
-                </p>
-            </div>
-            <div class="secondDiv">
-
-                <h1>Best Time to Travel</h1>
-                <p>The gigantic Kruger National Park (about the same size as Israel or Wales) is big enough to offer
-                    something for everyone.
-
-                    With diverse wildlife, including the Big Five (with an estimated 1,500 lions but heavily threatened
-                    rhinos,) Kruger’s excellent road network means that most areas are accessible even with two-wheel
-                    drive
-                    vehicles.
-
-                    Often derided for being “tame wilderness” because of tarred roads and good infrastructure, this huge
-                    park measures 414 kilometers from Crocodile Bridge in the south to Pafuri Gate in the north – for
-                    added
-                    wilderness appeal it is recommended to head farther into the less-visited tracks and trails of the
-                    north.
-
-                    For first-timers: For the independent traveler with a hired vehicle, Kruger is arguably the cheapest
-                    and
-                    most accessible of all Africa’s major parks. Sabi Sand Game Reserve shares a 50-kilometer unfenced
-                    border with Kruger National Park and it benefits from incredible wildlife viewing (along with
-                    possibly
-                    the best leopard spotting in the world.)
-
-                    For old hands: Phinda Private Game Reserve in KwaZulu-Natal offers some of the best cheetah
-                    sightings,
-                    huge leopards, a rare chance to see both the black and white rhinos and a bird list of well over 400
-                    species.
-                </p>
-            </div>
         </div>
-        <footer>&copy Robert Serembe under-construction</footer>
+
+        <h2>What is our customers saying?</h2>
+    </div>
 </body>
+<sec class="footer">
+    <p><a href="#top">Return to Top of the Page</a></p>
+    <footer>&copy Robert Serembe under-construction</footer>
+</sec>
 
 </html>
