--- a/About.html
+++ b/About.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jobs</h1>
-    <a href="index.html" >Go Back to Home page</a>
+    <h1>About US</h1>
+    <a href="index.html" >Come Back to Home page</a>
     
 </body>
 </html>
