--- a/Contact.html
+++ b/Contact.html
@@ -7,8 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jobs</h1>
-    <a href="index.html" >Go Back to Home page</a>
+    <h1>You Can Contacts Through</h1>
+    <ol>
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Yahoo.com</li>
+        <li>Linkedin</li>
+        <li>Instagram</li>
     
+    </ol>
+    <a href="index.html" >Go Back to Home page</a>
 </body>
 </html>
