--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+
+   
     <div class="menu-bar">
         <div class="header1">
             <h1>M&J<span> Discovers</span></h1>
@@ -26,7 +28,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#">About us.html</a>
+            <li><a href="#">About us</a>
 
                 <div class="sub-menu-1">
                     <ul>
@@ -44,6 +46,38 @@
             <li><a href="the future.html">Our Future Dest</a></li>
         </ul>
     </div>
+
+    <div class="container">
+        <div class="box_1">
+            <p>MEDIA QUERY TAB</p>
+        </div>
+        <div class="box_2">
+            <p>MEDIA QUERY TAB</p>
+        </div>
+    </div>
+
+
+<na class="nav-links">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About US</a></li>
+        <li><a href="Contact.html">Contact us</a></li>
+        <li><a href="Happenings.html">What is Happening</a></li>
+        <li><a href="Jobs.html">Available Jobs</a></li>
+        <li><a href="support.html">Link to Support US</a></li>
+    
+    </ul>
+</na>
+
+<sec class="Link-Browser">
+<ul>
+ <li><a href="https://www.olympic.edu/" target="_blank">Olympic Collge</a></li>
+ <p><strong>USE THE LINK ABOVE To</p></strong> Register your Clsses With <em>Olympic College</em> Today</p>
+</ul>
+</sec>
+
+
+
     <div class="header2">
         <div class="pages">
 
@@ -99,6 +133,9 @@
 
         <h2>What is our customers saying?</h2>
     </div>
+
+
+
 </body>
 <sec class="footer">
     <p><a href="#top">Return to Top of the Page</a></p>
