--- a/support.html
+++ b/support.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jobs</h1>
+    <h1>Our Support System</h1>
+    <p>If you love our services, please share the experience to your friends and come again next time</p>
     <a href="index.html" >Go Back to Home page</a>
-    
 </body>
 </html>
