--- a/Olympic.html
+++ b/Olympic.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>News</h1>
-    <a href="index.html" >Come Back to Home page</a>
-    
+    <h1><a href="https://www.olympic.edu/" target="_blank">Register with us for Next Semister Classes..</a></h1>
+    <a href="https://www.olympic.edu/" target="_blank"></a>
+    <a href="index.html">Go Back To Home Page</a>
 </body>
 </html>
