--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </p>
             <h2>Top Destinations</h2>
             <a href="TopDestinations.html">Destny</a><br>
-            <a href="https://www.olympic.edu/" target="_blank">Top Destinations</a>
+            <a href="https://www.olympic.edu/" target="_blank">Olympic College</a>
             <h2>Our Discoveries</h2>
             <h2>Future Destination</h2>
 
