--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
 </footer>
 <!--/ End Footer Area -->
 <div class="footer">
-    <footer>&copy Robert Serembe-Undreconstruction</footer>
+    <footer><a href>&copy Robert Serembe</a>-Under construction</footer>
    
 </div>
 <a href="#" class="scroll-top btn-hover">
