--- a/contact.html
+++ b/contact.html
@@ -377,10 +377,9 @@
         <!--/ End Footer Top -->
     </footer>
     <!--/ End Footer Area -->
-    <div class="made-in-ayroui mt-4">
-        <a href="https://wesley.io.ke" target="_blank" rel="nofollow">
-            <img style="width:220px" src="assets/images/wesley.svg">
-        </a>
+    <div class="footer">
+        <footer><a href>&copy Robert Serembe</a>-Under construction</footer>
+       
     </div>
     <a href="#" class="scroll-top btn-hover">
         <i class="lni lni-chevron-up"></i>
