--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="header-image">
-                            <img src="assets/images/header/hero-image.jpg" alt="#">
+                            <img src="big5/sunset.jpg" alt="#">
                         </div>
                     </div>
                 </div>
