--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                     fill="#DADADA"
                                 />
                             </svg>
-                            <img src="assets/images/about/about-img1.jpg" alt="about">
+                            <img src="big5/team.jpg" alt="about">
                         </div>
                     </div>
                     <div class="col-lg-6 col-12">
