--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                     <div class="row">
                         <div class="col-12">
                             <div class="content">
-                                <h6>latest news</h6>
+                                <h6><strong>Latest News</strong></h6>
                                 <h2 class="fw-bold">Latest News & Blog</h2>
                                 <p>
                                     There are many variations of passages of Lorem Ipsum available,
@@ -819,8 +819,8 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                     <img class="thumb" src="assets/images/blog/1.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author">
-                                    <span>BY TIM NORTON</span>
+                                    <img class="thumb" src="big5/1.jpg" alt="Author">
+                                    <span>By Robert Serembe</span>
                                 </div>
                             </div>
                             <div class="content-body">
@@ -844,8 +844,8 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                     <img class="thumb" src="assets/images/blog/2.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author">
-                                    <span>BY TIM NORTON</span>
+                                    <img class="thumb" src="big5/2.jpg" alt="Author">
+                                    <span>By Robert Serembe</span>
                                 </div>
                             </div>
                             <div class="content-body">
@@ -871,8 +871,8 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                     <img class="thumb" src="assets/images/blog/3.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author">
-                                    <span>BY TIM NORTON</span>
+                                    <img class="thumb" src="big5/3.jpg" alt="Author">
+                                    <span>By Robert Serembe</span>
                                 </div>
                             </div>
                             <div class="content-body">
@@ -958,7 +958,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                         </div>
                                         <div class="contact-content">
                                             <h4>Contact</h4>
-                                            <p>0984537278623</p>
+                                            <p>+1 (360) 8324040</p>
                                             <p>MJ_Tours@gmail.com</p>
                                         </div>
                                     </div>
