--- a/index.html
+++ b/index.html
@@ -1101,9 +1101,9 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                   hierarchies.
                                 </p>
                                 <p class="copyright-text">
-                                    <span>© 2024 Wesley UI.</span>
+                                    <span>© 2023 M&J Discovers</span>
                                     Designed and Developed by
-                                    <a href="#" rel="nofollow"></a>Wesley 0711971251</a>
+                                    <a href="#" rel="nofollow"></a>Robert Serembe</a>
                             </p>
                         </div>
                         <!-- End Single Widget -->
