--- a/pricing.html
+++ b/pricing.html
@@ -319,10 +319,9 @@
                   hierarchies.
                                 </p>
                                 <p class="copyright-text">
-                                    <span>© 2024 Wesley .</span>
-                                    Designed and Developed by
-                                    <a href="javascript:void(0)" rel="nofollow"> Wesley-0711971251</a>
-                                </p>
+                                    <span>&copy; 2023 M&J Discovers</span>
+                                    Designed and Developed by Robert Serembe
+                            </p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -332,16 +331,16 @@
                                 <h5>Solutions</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Marketing</a>
+                                        <a href="marketting">Marketing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Analytics</a>
+                                        <a href="analytics">Analytics</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Commerce</a>
+                                        <a href="commerce">Commerce</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Insights</a>
+                                        <a href="insights">Insights</a>
                                     </li>
                                 </ul>
                             </div>
@@ -353,16 +352,16 @@
                                 <h5>Support</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Pricing</a>
+                                        <a href="pricing">Pricing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Documentation</a>
+                                        <a href="documentation">Documentation</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Guides</a>
+                                        <a href="guides">Guides</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">API Status</a>
+                                        <a href="api">API Status</a>
                                     </li>
                                 </ul>
                             </div>
@@ -381,7 +380,7 @@
                                 >
                                     <input
                                         name="EMAIL"
-                                        placeholder="Email address"
+                                        placeholder="Email Address"
                                         required="required"
                                         type="email"
                                     >
@@ -408,7 +407,7 @@
     <a href="#" class="scroll-top btn-hover">
         <i class="lni lni-chevron-up"></i>
     </a>
-    <!--====== js ======-->
+    <!--======  ======-->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/main.js"></script>
