--- a/services.html
+++ b/services.html
@@ -92,16 +92,16 @@
                     <h5 class="menu-title">Quick Links</h5>
                     <ul>
                         <li>
-                            <a href="javascript:void(0)">About Us</a>
+                            <a href="about us">About Us</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Our Team</a>
+                            <a href="our team">Our Team</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Latest News</a>
+                            <a href="latest news">Latest News</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Contact Us</a>
+                            <a href="contact us">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -110,22 +110,22 @@
                     <h5 class="social-title">Follow Us On</h5>
                     <ul>
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="#">
                                 <i class="lni lni-facebook-filled"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="#">
                                 <i class="lni lni-twitter-original"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="#">
                                 <i class="lni lni-linkedin-original"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="#">
                                 <i class="lni lni-youtube"></i>
                             </a>
                         </li>
@@ -279,10 +279,9 @@
                   hierarchies.
                                 </p>
                                 <p class="copyright-text">
-                                    <span>© 2024 Wesley.</span>
-                                    Designed and Developed by
-                                    <a href="javascript:void(0)" rel="nofollow">Wesley 0711971251</a>
-                                </p>
+                                    <span>&copy; 2023 M&J Discovers</span>
+                                    Designed and Developed by Robert Serembe
+                            </p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -292,16 +291,16 @@
                                 <h5>Solutions</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Marketing</a>
+                                        <a href="marketing">Marketing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Analytics</a>
+                                        <a href="analytics">Analytics</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Commerce</a>
+                                        <a href="commerce">Commerce</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Insights</a>
+                                        <a href="insights">Insights</a>
                                     </li>
                                 </ul>
                             </div>
@@ -313,16 +312,16 @@
                                 <h5>Support</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Pricing</a>
+                                        <a href="pricing">Pricing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Documentation</a>
+                                        <a href="documentantion">Documentation</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Guides</a>
+                                        <a href="guides">Guides</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">API Status</a>
+                                        <a href="api">API Status</a>
                                     </li>
                                 </ul>
                             </div>
