--- a/contact.html
+++ b/contact.html
@@ -152,8 +152,8 @@
                                         </div>
                                         <div class="contact-content">
                                             <h4>Contact</h4>
-                                            <p>0984537278623</p>
-                                            <p>yourmail@gmail.com</p>
+                                            <p>+1 (360)321 4040</p>
+                                            <p>MJ_Tours@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -164,7 +164,7 @@
                                         </div>
                                         <div class="contact-content">
                                             <h4>Address</h4>
-                                            <p>175 5th Ave, New York, NY 10010</p>
+                                            <p>175 5th Ave, Olympics, WA. 10010</p>
                                             <p>United States</p>
                                         </div>
                                     </div>
@@ -295,10 +295,9 @@
                   hierarchies.
                                 </p>
                                 <p class="copyright-text">
-                                    <span>© 2024 Wesley UI.</span>
-                                    Designed and Developed by
-                                    <a href="javascript:void(0)" rel="nofollow">Wesley 0711971251</a>
-                                </p>
+                                    <span>&copy; 2023 M&J Discovers</span>
+                                    Designed and Developed by Robert Serembe
+                            </p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -308,16 +307,16 @@
                                 <h5>Solutions</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Marketing</a>
+                                        <a href="marketing">Marketing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Analytics</a>
+                                        <a href="analytics">Analytics</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Commerce</a>
+                                        <a href="commerce">Commerce</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Insights</a>
+                                        <a href="insights">Insights</a>
                                     </li>
                                 </ul>
                             </div>
@@ -329,16 +328,16 @@
                                 <h5>Support</h5>
                                 <ul>
                                     <li>
-                                        <a href="javascript:void(0)">Pricing</a>
+                                        <a href="pricing">Pricing</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Documentation</a>
+                                        <a href="documentation">Documentation</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">Guides</a>
+                                        <a href="guides">Guides</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)">API Status</a>
+                                        <a href="api status">API Status</a>
                                     </li>
                                 </ul>
                             </div>
