--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                                     fill="#DADADA"
                                 />
                             </svg>
-                            <img src="big5/team.jpg" alt="about">
+                            <img src="big5/big-five-2.jpg" alt="about">
                         </div>
                     </div>
                     <div class="col-lg-6 col-12">
@@ -815,11 +815,11 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                         <!-- Single News -->
                         <div class="single-news">
                             <div class="image">
-                                <a href="javascript:void(0)">
-                                    <img class="thumb" src="assets/images/blog/1.jpg" alt="Blog">
+                                <a href="#">
+                                    <img class="thumb" src="big5/tree.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="big5/1.jpg" alt="Author">
+                                    <img class="thumb" src="big5/tree.jpg" alt="Author">
                                     <span>By Robert Serembe</span>
                                 </div>
                             </div>
@@ -841,10 +841,10 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                         <div class="single-news">
                             <div class="image">
                                 <a href="#">
-                                    <img class="thumb" src="assets/images/blog/2.jpg" alt="Blog">
+                                    <img class="thumb" src="big5/road.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="big5/2.jpg" alt="Author">
+                                    <img class="thumb" src="big5/tree.jpg" alt="Author">
                                     <span>By Robert Serembe</span>
                                 </div>
                             </div>
@@ -868,10 +868,10 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                         <div class="single-news">
                             <div class="image">
                                 <a href="#">
-                                    <img class="thumb" src="assets/images/blog/3.jpg" alt="Blog">
+                                    <img class="thumb" src="big5/tree.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
-                                    <img class="thumb" src="big5/3.jpg" alt="Author">
+                                    <img class="thumb" src="big5/tree.jpg" alt="Author">
                                     <span>By Robert Serembe</span>
                                 </div>
                             </div>
