--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ Imagine unmissable experiences you’ve always dreamed of, getting to know the l
                         <div class="single-news">
                             <div class="image">
                                 <a href="#">
-                                    <img class="thumb" src="big5/tree.jpg" alt="Blog">
+                                    <img class="thumb" src="images/birds.jpg" alt="Blog">
                                 </a>
                                 <div class="meta-details">
                                     <img class="thumb" src="big5/tree.jpg" alt="Author">
